# Cancer-Digital-Twins

./: .env.example  .gitignore  README.md  app.py  cancer_digital_twin_100_patients.sql  cancer_digital_twin_ddl.sql  main.py  pyproject.toml
db/: connection.py  queries.py
simulation/: ddi_checker.py  feature_builder.py  prompt_builder.py  simulator.py
ui/: patient_card.py  results_panel.py  sidebar.py
